Minor fixes to doc and code clean up. Make run on Java 11